feat(characters): next node route done for characters createion
